vitrail-sqlite-macros/tests/ui/fail/compound_primary_key_autoincrement.stderr
error: `@default(autoincrement())` is only supported on a field that is the sole primary key column in SQLite
 --> tests/ui/fail/compound_primary_key_autoincrement.rs:9:24
  |
9 |         id        Int @default(autoincrement())
  |                        ^^^^^^^
